2012-02-10  Jesse Kornblum  <research@jessekornblum.com>:

	* sample-hashes/sample.{c,jpg}: Added Windows executable with non-executable extension
	* src/winpe.cpp, main.cpp, dig.cpp: Added comments
	* configure.ac: Version bump to 4.1
	* src/*.cpp: Added $Id$ tags

2012-02-08  Jesse Kornblum  <research@jessekornblum.com>:

	* src/dig.cpp, winpe.h, winpe.cpp, main.cpp: Added check for Windows PE files to expert mode.

2012-01-30  Jesse Kornblum  <research@jessekornblum.com:>

	* src/display.cpp: Reverted previous change, but updated test for presence of vasprintf.

2012-01-29  Jesse Kornblum  <research@jessekornblum.com>:

	* src/dig.cpp: Check for junction points before adding files to queue
	* src/display.cpp: Removed redefinition of vasprintf. It is apparently now part of the compiler's stdio.h

2012-01-28  Jesse Kornblum  <research@jessekornblum.com>:

	* configure.ac: Version bump to 4.0.2-001

2012-01-28  Simson Garfinkel  <simsong@mucha>

	* src/display.cpp (display::dfxml_write): strange; sstream should have been stringstream. Well, it's fixed now.

2012-01-23  Simson Garfinkel  <simsong@Mucha.local>

	* src/helpers.cpp: successfully removed itos().

2012-01-22  Jesse Kornblum  <research@jessekornblum.com>:

	* src/threadpool.h: Removed debugging fprintf
	* configure.ac: Version bump to 4.0.1
	* NEWS: Updated for version 4.0.1

2012-01-21  Simson Garfinkel  <simsong@imac3.home>

	* src/hash.cpp (display::hash_stdin): added setmode stdin to binary on windows

2012-01-18  Jesse Kornblum <research@jessekornblum.com>

	* CONFIGURE_FC.sh: Removed FC16 checks. It doesn't work.

2012-01-16  Jesse Kornblum <research@jessekornblum.com>

	* CONFIGURE_FC.sh: Updated for Fedora Core 16. Improved error messages.

2012-01-09  Jesse Kornblum <research@jessekornblum.com>

	* Makefile.am: The doc files for Win32 were backward. Addresses bug 3471505.

2012-01-06  Jesse Kornblum <research@jessekornblum.com>
